--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'java'
 apply plugin: 'antlr'
 
 
+
 sourceCompatibility = 1.8
 
 repositories {
@@ -13,5 +14,6 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    antlr "org.antlr:antlr:3.5.2"
+    antlr "org.antlr:antlr4:4.7.1"
+
 }
